# fiber-user-management

./: README.md  go.mod
backend/: go.mod  go.sum
backend-rust/: .gitignore  Cargo.toml
backend-rust/src/: lib.rs  migration.rs  module.rs
backend-rust/src/entities/: role.rs  user.rs
backend-rust/src/providers/: mod.rs  role.rs  user.rs
backend/pkg/auth/: crud.go  middleware.go  model.go  module.go  role.go  role_provider.go  user.go  user_provider.go
frontend/: .gitignore
frontend/components/: LoginForm.tsx  UserDeleteButton.tsx  UserEditModal.tsx  UserInfo.tsx  UserList.tsx
frontend/context/: AuthContext.tsx
frontend/hooks/: useUsers.ts
frontend/lib/: api-server.ts  api.ts
frontend/types/: index.ts
pkg/auth/: model.go  module.go
