[package]
name = "auth-module"
version = "0.1.0"
edition = "2021"

[lib]
name = "auth_module"
path = "src/lib.rs"

[dependencies]
backend-core = { path = "../../backend-core/backend-rust" }

axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["std"] }
